--- a/chat/component.yaml
+++ b/chat/component.yaml
@@ -1,4 +1,19 @@
+name: chat
+author: valory
+version: 0.1.0
+description: A tool interacting with a chat assistant.
+license: MIT
+
+models:
+  default_model_provider: ollama
+  ollama: 
+    model: ollama/phi
+    max_tokens: 1000
+    temperature: 0
+    api_base: http://localhost:11434
+
 inputs:
+    system_message: "You are a helpful AI assistant."
     save: false
     location: ipfs
 
